--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pascals-Web</title>
+  </head>
+  <body>
+    <h1>Projekte aller art von <code>Pascal Schiffers</code> gibts hier</h1>
+    <div>stay tuned</div>
+    <img
+      src="https://media1.tenor.com/m/1pxfDm6nMcsAAAAC/slicing-satisfying.gif"
+      alt=""
+    />
+  </body>
+</html>
