--- a/index.html
+++ b/index.html
@@ -17,24 +17,28 @@
       </div>
       <div class="dice-container">
         <div class="dice-wrapper">
-          <img id="dice1" src="images/BaseDice/dice1.png" alt="Dice 1" />
+          <img id="dice1" src="/images/BaseDice/dice1.png" alt="Dice 1" />
         </div>
         <div class="dice-wrapper">
-          <img id="dice2" src="images/BaseDice/dice1.png" alt="Dice 2" />
+          <img id="dice2" src="/images/BaseDice/dice1.png" alt="Dice 2" />
         </div>
         <div class="dice-wrapper">
-          <img id="dice3" src="images/BaseDice/dice1.png" alt="Dice 3" />
+          <img id="dice3" src="/images/BaseDice/dice1.png" alt="Dice 3" />
         </div>
         <div class="dice-wrapper">
-          <img id="dice4" src="images/BaseDiceSpecial/dice1.png" alt="Dice 4" />
+          <img
+            id="dice4"
+            src="/images/BaseDiceSpecial/dice1.png"
+            alt="Dice 4"
+          />
         </div>
       </div>
       <div id="meteorDice" class="dice-container" style="display: none">
         <div class="dice-wrapper">
-          <img id="dice5" src="images/meteors/dice1.png" alt="Meteor Dice 1" />
+          <img id="dice5" src="/images/meteors/dice1.png" alt="Meteor Dice 1" />
         </div>
         <div class="dice-wrapper">
-          <img id="dice6" src="images/meteors/dice1.png" alt="Meteor Dice 2" />
+          <img id="dice6" src="/images/meteors/dice1.png" alt="Meteor Dice 2" />
         </div>
       </div>
       <div class="button-container">
