--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
       </div>
       <div id="meteorDice" class="dice-container" style="display: none">
         <div class="dice-wrapper">
-          <img id="dice5" src="/images/meteors/dice1.png" alt="Meteor Dice 1" />
+          <img
+            id="dice5"
+            src="/images/meteors/direction/dice1.png"
+            alt="Meteor Dice 1"
+          />
         </div>
         <div class="dice-wrapper">
-          <img id="dice6" src="/images/meteors/dice1.png" alt="Meteor Dice 2" />
+          <img
+            id="dice6"
+            src="/images/meteors/strength/dice1.png"
+            alt="Meteor Dice 2"
+          />
         </div>
       </div>
       <div class="button-container">
