--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="/images/Schriftzug.png" alt="" />
+      <img class="logo" src="/images/Schriftzug.png" alt="" />
       <div class="controls">
         <label>
           <input
