--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
   <body>
     <div class="container">
       <img class="logo" src="/images/Schriftzug.png" alt="" />
-      <div class="controls">
-        <label>
-          <input
-            type="checkbox"
-            id="meteorCheckbox"
-            onchange="handleExpansionChange()"
-          />
-          METEORS Expansion
-        </label>
+
+      <div class="accordion">
+        <div class="accordion-item">
+          <button class="accordion-button">Erweiterungen \/</button>
+          <div class="accordion-content">
+            <form>
+              <label>
+                <input
+                  type="checkbox"
+                  id="meteorCheckbox"
+                  onchange="handleExpansionChange()"
+                />
+                METEORS Expansion
+              </label>
+              <br />
+              <label> <input type="checkbox" name="option2" /> Option 2 </label>
+              <br />
+              <label> <input type="checkbox" name="option3" /> Option 3 </label>
+            </form>
+          </div>
+        </div>
       </div>
+
       <div class="dice-container">
         <div class="dice-wrapper">
           <img id="dice1" src="/images/BaseDice/dice1.png" alt="Dice 1" />
