--- a/Bueste_html/index.html
+++ b/Bueste_html/index.html
@@ -84,12 +84,20 @@
         hallen in deinem Kopf nach: „Hat bestimmt seine Richtigkeit.“
       </p>
     </div>
-    <!--    <script>
-      document.addEventListener("scroll", () => {
-        if (window.scrollY === 0) {
-          window.scrollTo(0, 5); // Nudge the page slightly down
-        }
+    <script>
+      // service-worker.js
+      self.addEventListener("install", (event) => {
+        console.log("Service worker installed.");
       });
-    </script> -->
+
+      self.addEventListener("fetch", (event) => {
+        event.respondWith(fetch(event.request));
+      });
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/service-worker.js").then(() => {
+          console.log("Service Worker Registered");
+        });
+      }
+    </script>
   </body>
 </html>
