--- a/Bueste_html/index.html
+++ b/Bueste_html/index.html
@@ -6,12 +6,15 @@
     <link rel="manifest" href="manifest.json" />
     <title>Projekt-Büste / Project-Bust</title>
     <style>
+      body {
+        background-color: rgb(188, 188, 188);
+      }
       .text {
         color: rgb(0, 0, 0);
         font-size: 18px;
         line-height: 1.6;
         text-align: left;
-        font-family: sans-serif;
+        font-family: "Helvetica", "Avenir", sans-serif;
         padding: 28px;
         overflow-wrap: break-word;
         word-wrap: break-word;
